# Libraries

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  beet-release.yaml  beet.yaml  build.py  latest.yaml  packages.json  pyproject.toml  temp.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-changes.py  build-changes.sh  nightly-build.yml  pr-comment.yml  push-to-smithed.py  pypi.yml  python-package-conda.yml  release.yml  test.yml
1.19/: manifest.json
1.20/: manifest.json
1.21.1/: manifest.json
1.21.10/: manifest.json
1.21.11/: manifest.json
1.21.4/: manifest.json
1.21.5/: manifest.json
1.21.6/: manifest.json
26.1/: manifest.json
default/: dbg.py  documentation.py  versioning.py
docs/smithed-damage/entity/: apply.md  death_messages.md
libs/: __init__.py  beet-common.yaml
libs/actionbar/: README.md  beet.yaml
libs/actionbar/data/load/tags/functions/: load.json
libs/crafter/: __init__.py  beet.yaml  item_groups.py
libs/crafter-addon/: __init__.py  beet.yaml
libs/crafter/assets/smithed.crafter/font/: gui.json
libs/custom-block/: README.md  beet.yaml
libs/damage/: beet.yaml
libs/enchanter/: beet.yaml
libs/item/: beet.yaml  nbt_literals.py
libs/packs/crafter-addon/: beet.yaml
libs/packs/custom-block/: beet.yaml
libs/packs/item/: README.md  beet.yaml
libs/plugins/: documentation.py  misc.py  versioning.py
libs/prevent-aggression/: beet.yaml
libs/template/: README.md
plugins/: build.py  versioning.py
smithed_libraries/: __init__.py  commands.py  common.yaml  libraries.json
smithed_libraries/packs/actionbar/: README.md  beet.yaml  message.md
smithed_libraries/packs/behavior-tags/: README.md
smithed_libraries/packs/crafter/: README.md  beet.yaml
smithed_libraries/packs/crafter-addon/: beet.yaml
smithed_libraries/packs/custom-block/: README.md  beet.yaml
smithed_libraries/packs/damage/: README.md  beet.yaml
smithed_libraries/packs/damage/entity/: apply.md  death_events.md  death_messages.md
smithed_libraries/packs/damage/player/: damage_events.md
smithed_libraries/packs/enchanter/: beet.yaml
smithed_libraries/packs/item/: README.md  beet.yaml
smithed_libraries/packs/prevent-aggression/: README.md  beet.yaml  team.md
smithed_libraries/packs/title/: README.md  beet.yaml
smithed_libraries/packs/wiki/: beet.yaml
smithed_libraries/plugins/: broadcast_status.py  comments.py  companion.py  companion_mod.py  crafter.py  crafter_item_list.py  documentation.py  manifest.py  misc.py  nbt_literals.py  relay_config.py  versioning.py
smithed_libraries/plugins/versioning/: README.md  __init__.py  api.py  load.py  models.py  plugin.py  types.py  utils.py
smithed_libraries/plugins/wiki/: __init__.py  models.py  plugin.py  resources.py
template/: README.md  beet.yaml
(+2245 files in other folders)
