[project]
name = "smithed-libraries"
version = "0.16.4"
description = "All of the Smithed Libraries"
authors = [{ name = "Smithed Council", email = "team@smithed.dev" }]
requires-python = ">=3.14,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mecha>=0.103.0,<0.104",
    "bolt>=0.50.0,<0.51",
    "bolt-expressions>=0.17.0,<0.18",
    "beet>=0.115.0",
    "pydantic>=2.5.2,<3",
    "rich>=13.9.2,<14",
]

[dependency-groups]
dev = [
    "devtools>=0.9.0,<0.10",
    "python-semantic-release>=7.32.2,<8",
    "requests>=2.28.1,<3",
    "github-action-utils>=1.1.0,<2",
    "ruff>=0.15.10",
]

[tool.uv]
default-groups = "all"

[tool.semantic_release]
branch = "main"
version_variable = ["smithed_libraries/__init__.py:__version__"]
version_toml = "pyproject.toml:project.version"
major_on_zero = false
build_command = "uv build"

[tool.pyright]
typeCheckingMode = "strict"
